Add benchmarks and a profile to run them